recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:3: error: not found: value nlength
  var nlng = nlength/2;
             ^